# nova-manager

./: GHOST_VARIANTS_INVESTIGATION.md  HANDOFF.md  LIVEOPS_NOTICE_ISSUE.md  NOVA_ISSUE_PRIORITY_SHADOWING.md  README.md  alembic_head.sql  alembic_head_old.sql  alembic_head_old_2.sql  db_schema.sql  deploy_to_gcp.sh  docker-compose.yml  error_log.md  nova-requests-response.md  nova-requests.md  pyproject.toml
alembic/: env.py
alembic/versions/: 276accb66c04_add_simulations_and_simulation_runs_.py  8ba9bc07debf_add_analytics_backend_to_apps.py  (+1 more)
changes/: 001-replace-bigquery-with-clickhouse.md  002-standardize-user-id-to-external.md  003-event-batching.md
docs/: Battlin_GTM_KPI_Simulator_v3.xlsx  business-data.md  clickhouse-schema.md  evaluation.md  events.md  formula-metrics.md  gtm-kpi-simulator.md  index.md  metrics.md  operational-metrics.md  personalisations.md  simulation-vs-actuals-tracking.md  users.md
issues/: nova-compute-errors-2026-04-29.md  rq-worker-macos-fork-crash.md
nova_manager/: main.py  nova-manager.code-workspace
scripts/: bootstrap_clickhouse.py  bootstrap_playground.py  cleanup_experiences.py  gcp_admin_setup.sh  gcp_infra_setup.sh  run_notice_service.py  run_worker.py  seed_gtm_kpis.py  smoke_test.py  test_flow.py  test_flow.sh
tests/: conftest.py  test_bug_fixes.py  test_bug_replication.py  test_compute_queries.py  test_identify_user.py  test_kql_queries.py  test_operational_and_formula_queries.py  test_payload_personalisation.py  test_retention_query.py  test_review_fixes.py  test_simulation_engine.py  test_simulation_vs_excel.py
(+59 files in other folders)
