[project]
name = "nova-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "clickhouse-connect (>=0.8.0,<1.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "rq (>=2.4.1,<3.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]


[tool.ruff]
exclude = [
    "alembic/versions/*",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"
aiosqlite = "^0.21.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
